--- a/styles.css
+++ b/styles.css
@@ -5,14 +5,17 @@
 
 .calculator-container {
     /* background-color: lightGrey; */
+    /* box-sizing: border-box; */
     width: max-content;
     margin: auto;
     border-radius: 10px;
 }
 
 .display {
+    max-width: 400px;
+    box-sizing: border-box;
     /* width: 100%; */
-    height: 70px;
+    height: 100px;
     /* font-size: 48px; */
     background-color: lightGrey;
     display: flex;
